force-app/main/default/objects/Membership__c/fields/Annual_Price__c.field-meta.xml
<CustomField>
    <fullName>Annual_Price__c</fullName>
    <inlineHelpText>Annual/Full Price of most recent renewal of this membership</inlineHelpText>
    <label>Annual Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>