force-app/main/default/objects/Membership__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Membership level of most recent renewal of this membership</inlineHelpText>
    <label>Level</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Memberships</relationshipLabel>
    <relationshipName>Memberships</relationshipName>
    <type>Lookup</type>
</CustomField>