force-app/main/default/objects/Membership__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF(
   TODAY() &lt; Start_Date__c,
   &quot;Purchased&quot;,
   IF(
      OR(
         TODAY() &gt; End_Date__c,
         ISBLANK(End_Date__c)
        ),
      &quot;Expired&quot;,
      &quot;Active&quot;
     )
  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>