force-app/main/default/objects/Membership__c/fields/Status_with_Project__c.field-meta.xml
<CustomField>
    <fullName>Status_with_Project__c</fullName>
    <description>This field was added for the related list on the Account layout.</description>
    <formula>Status__c + &quot; - &quot; + Project__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status + Project</label>
    <type>Text</type>
</CustomField>